@@ -53,12 +53,8 @@ stns <- tni2tnsPreprocess(stni, survivalData = survival.data,
 keycovar = c('Grade','Age'), time = 1, event = 2)
 stns <- tnsGSEA2(stns)
 
-# infer dual regulons
-smbr <- tni2mbrPreprocess(stni)
-smbr <- mbrAssociation(smbr)
-
 # KM analysis for dual regulons
-# stns <- tnsKmInteraction(stns, smbr, stepFilter=FALSE)
+# stns <- tnsKmInteraction(stns, stepFilter=FALSE)
 # tnsPlotKmInteraction(stns, dualreg = "FOXM1~PTTG1")
 
 }
